# hsmonitor

./: .gitignore  README.md  flake.nix  hie.yaml  hsmonitor.cabal
app/: Config.hs  Main.hs  Options.hs
nix/: nixosModules.nix  overlays.nix  pkgs.nix
nix/hsmonitor/: default.nix
nix/protobuf/: default.nix
nix/riemann-client/: default.nix
src/: Cmd.hs  Mail.hs  Port.hs  Riemann.hs  Scheduler.hs  Types.hs  Webpage.hs
test/: Main.hs
