cabal-version:      3.0
name:               hsmonitor
version:            0.1.0.0
license:            BSD-3-Clause
author:             Felix Leitz
maintainer:         felix.leitz@active-group.de
copyright:          2024 Active Group GmbH
category:           Web
build-type:         Simple
extra-source-files: README.md

common options
  ghc-options:      -Wall -threaded -O2 -Werror
  default-language: GHC2024

library
  import:          options
  hs-source-dirs:  src
  exposed-modules:
    Cmd
    Mail
    Port
    Riemann
    Scheduler
    Types
    Webpage

  build-depends:
    , async
    , base
    , bytestring
    , http-conduit
    , http-types
    , mime-mail
    , process
    , random
    , smtp-mail
    , time
    , utf8-string

executable hsmonitor
  import:           options
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:
    Config
    Options

  build-depends:
    , base
    , hsmonitor
    , optparse-applicative
    , time
